# DRIVERLESS

./: .flake8  .gitignore  requirements.txt  setup_venv.sh
.github/workflows/: docs_pages_workflow.yml  python-linting.yml  static.yml
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/common_msgs/: Camera_dofs.h  Cone.h  Controls.h  Map.h  Mission.h  Spawn.h  SpawnRequest.h  SpawnResponse.h  Trajectory.h  velState.h
docs/: Makefile  RS-LiDAR-16.md  camera_perception.md  can.md  can_connection.md  car_interface.md  common.md  conf.py  control.md  delaunay.md  fsSim.md  fssimConfig.md  fssim_interface.md  genindex.html  howToDoc.md  index.html  index.md  instalarEntorno.md  lidar.md  lidar_perception.md  localization.md  nodes.md  nodos.md  objects.inv  perception.md  planning.md  pyproject.toml  requirements.txt  search.html  searchindex.js  vision_cone_detector.md
docs/_build/doctrees/: aboutUs.doctree  common.doctree  control.doctree  ejemplos.doctree  environment.pickle  fssim_interface.doctree  index.doctree  instalarEntorno.doctree  localization.doctree  nodos.doctree  perception.doctree  planning.doctree
docs/_build/html/: .buildinfo  aboutUs.html  common.html  control.html  ejemplos.html  fssim_interface.html  genindex.html  index.html  instalarEntorno.html  localization.html  nodos.html  objects.inv  perception.html  planning.html  search.html  searchindex.js
docs/_source/: conf.py
docs/_sources/: index.md.txt
docs/content/: howToDoc.md  index.md  vision_cone_detector.md
docs/content/environment_setup/: can_connection.md  epos_connection.md  instalarEntorno.md
docs/content/lidars/: RS-LiDAR-16.md  lidar.md
docs/content/packages_and_nodes/: common.md  control.md  pkg_and_nodes.md
docs/content/slam/: resampling.md  slam.md
docs/source/: conf.py  index.rst
src/can_interface/: CMakeLists.txt  package.xml
src/can_interface/launch/: can_interface.launch
src/can_interface/src/: can_handle.py  main.py
src/car_interface/: CMakeLists.txt  package.xml
src/car_interface/can/: CMakeLists.txt  package.xml
src/car_interface/can_c/: CMakeLists.txt  package.xml
src/car_interface/can_c/launch/: mission.launch
src/car_interface/can_c/src/: .missionHandle.cpp.swp  canInterface.cpp  canInterface.cpp.save  canInterface.hpp  can_handle.cpp  can_handle.hpp  main.cpp  missionHandle.cpp  telemetry.cpp
src/car_interface/src/: push2.py  pushing_script.py  steering_handle.py  steeringangle.py
src/car_interface/steering/: CMakeLists.txt  package.xml
src/car_interface/steering/config/: steering.yaml
src/car_interface/steering/launch/: steering.launch
src/car_interface/steering/src/: eposhandle.py  fssim_inspection_control.py  inspection_control.py  main.py  pushing_inspection.py  steering_handle.py
src/car_interface/steering_c/: CMakeLists.txt  package.xml
src/car_interface/steering_c/include/: eposHandle.hpp
src/car_interface/steering_c/src/: eposHandle.cpp  main.cpp
src/car_state/: CMakeLists.txt  manifest.xml  package.xml
src/car_state/config/: car_state.yaml
src/car_state/launch/: car_state.launch
src/car_state/src/: main.py  plot2.py  plot_car_state.py  state_handle.py
src/common/common_meta/: .ebs_test.launch.swp  CMakeLists.txt  acceleration.launch  autocross.launch  boot_autonomous_system.sh  ebs_test.launch  feed_forward.launch  fsds_simulation.launch  fssim_acceleration.launch  fssim_autocross.launch  fssim_ebs_test.launch  fssim_ekf_slam.launch  fssim_mpc.launch  (+22 more)
src/common/common_msgs/: CMakeLists.txt  package.xml
src/common/common_msgs/msg/: Camera_dofs.msg  CarState.msg  Cone.msg  Controls.msg  GpsPos.msg  Map.msg  MapList.msg  MapState.msg  Mission.msg  Simplex.msg  Trajectory.msg  Triangulation.msg  velState.msg
src/common/common_msgs/srv/: MPCCurrentState.srv
src/control/PP_cpp/: CMakeLists.txt  package.xml
src/control/PP_cpp/include/: ControlHandle.hpp  PurePursuit.hpp
src/control/PP_cpp/src/: ControlHandle.cpp  PurePursuit.cpp  PurePursuit.hpp  main.cpp
src/control/control_meta/: CMakeLists.txt  package.xml
src/control/control_meta/missions/: sim_skidpad.launch
src/control/mpc/: CMakeLists.txt  package.xml
src/control/mpc/src/: control_handle.py  main.py  mpc_handle.py
src/control/mpc_control/: CMakeLists.txt  package.xml
src/control/mpc_control/include/utrilla_mpc/: utrilla_wrapper.h
src/control/mpc_control/model/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  prueba_kin.cpp  prueba_kin_codegen  prueba_kin_old.cpp
src/control/mpc_control/model/prueba_kin_export/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c
src/control/mpc_control/src/: utrilla_node.cpp  utrilla_wrapper.cpp
src/fssim_interface/: package.xml
src/fssim_interface/launch/: simulation.launch
src/fssim_interface/src/: main.py  transformer.py
src/localization/: CMakeLists.txt  package.xml
src/perception/imycamera/: CMakeLists.txt  package.xml
src/perception/imycamera/config/: camera.yaml
src/perception/imycamera/launch/: camera.launch
src/perception/imycamera/src/: main.py
src/perception/lidar_perception/: CMakeLists.txt  package.xml
src/perception/lidar_perception/config/: lidar_cpp.yaml  lidar_rviz.rviz
src/perception/lidar_perception/launch/: lidar_cpp.launch  limovelo_interface.launch
src/perception/lidar_perception/src/: .lidar_handle.cpp.swp  PointXYZColorScore.h  lidar_handle.cpp  lidar_handle.hpp  lidar_handle_francis.cpp  limovelo_interface.cpp  main.cpp  pointRT.h
src/perception/new_lidar_perception/: CMakeLists.txt  package.xml
src/perception/new_lidar_perception/config/: lidar_cpp.yaml
src/perception/new_lidar_perception/launch/: lidar_cpp.launch  new_lidar_cpp.launch
src/perception/new_lidar_perception/src/: lidar_handle.cpp  new_main.cpp
src/simulators/fsds_interface/: CMakeLists.txt  package.xml
src/simulators/fsds_interface/launch/: simulation.launch
src/simulators/fsds_interface/src/: main.py  transformer.py
src/simulators/fssim_interface/: CMakeLists.txt
(+314 files in other folders)
