<?xml version="1.0"?>
<package format="2">
  <name>steering</name>
  <version>0.1.0</version>
  <description>Package that handles harware comunication for steering, motor and sensors.</description>

  <maintainer email="pindado.jacobo@gmail.com">Jacobo Pindado</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
</package>
