<?xml version="1.0"?>
<package format="2">
  <name>control_meta</name>
  <version>0.0.0</version>
  <description>Package with all missions defined</description>

  
  <maintainer email="marianorio24@gmail.com">Mariano</maintainer>
  <license>TODO</license>
   <author email="marianorio24@gmail.com">Mariano</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


</package>
