<?xml version="1.0"?>
<package format="2">
  <name>mpc</name>
  <version>0.1.0</version>
  <description>MPC implementation of Javier Utrilla's theory</description>

  <maintainer email="pindado.jacobo@gmail.com">Jacobo Pindado</maintainer>
  <maintainer email="javutrvaz@alum.us.es">Javier Utrilla</maintainer>



  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <export>
  </export>
</package>
